add page and menu trash APIs
